# framework.uifw.text-input-setting-wearable

./: CMakeLists.txt  org.tizen.w-text-input-setting.manifest  org.tizen.w-text-input-setting.rule  org.tizen.w-text-input-setting.xml
data/: CMakeLists.txt  w-text-input-setting-main.edc  w-text-input-setting.edc
include/: log.h  logic.h  main.h  setting-text-input.h  util_efl.h
packaging/: org.tizen.w-text-input-setting.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  lo.po  lt.po  (+38 more)
src/: logic.c  main.c  setting-text-input.cpp  util_efl.c
